fixed minor bug with alert

--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -17,6 +17,11 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  
+  <script>
+    // Erase later
+    alert('Important! This project is under development...')
+  </script>
 </body>
 
 <style>
