same and added emoji :D

--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/jpeg" href="./public/Emoji.jpeg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Turner Lopez, Juan Pablo - Portfolio</title>
 
@@ -17,7 +17,14 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  
+
+  <!-- A little help for the Netlify bots if you're not using a SSG -->
+  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="name" />
+    <input type="email" name="email" />
+    <textarea name="message"></textarea>
+  </form>
+
   <script>
     // Erase later
     alert('Important! This project is under development...')
