--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -27,7 +27,7 @@
 
   <script>
     // Erase later
-    // alert('Important! This project is under development...')
+    alert('Important! This project is under development...')
   </script>
 </body>
 
