added hr styled to whole app, added skills section with some icons in a new folder, in some files I deleted ';', in forms added autocomplete and id if needed, started studies section with study cards & added sass for scss in skills section

--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -20,8 +20,8 @@
 
   <!-- A little help for the Netlify bots if you're not using a SSG -->
   <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-    <input type="text" name="name" />
-    <input type="email" name="email" />
+    <input type="text" name="name" id="netlify-name-hidden" autocomplete="false" />
+    <input type="email" name="email" id="netlify-email-hidden" autocomplete="false" />
     <textarea name="message"></textarea>
   </form>
 
